# aya-my-tk

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  burmese_ocr.py  docker-compose.yml  pyproject.toml  run.py
aya-myanmar-toolkit/test/bench/: evals.py  exam_eval.py
ayamytk/datagen/distil/: formatters.py  runs.py
ayamytk/test/bench/: .exam_eval.py  common.py  evals.py  exam_eval.py  mmlu_eval.py  models.py  utils.py
ayamytk/test/bench/G12-Exam/: fib.csv  multiple_choice_qna.csv  tof_qna.csv
ayamytk/test/bench/mmlu/: mmlu_lite_my_400.csv  mmlu_lite_my_400_single_row.csv  test.csv
ayamytk/test/bench/sampler/: __init__.py  chat_completion_sampler.py  cohere_sampler.py  custom_sampler.py  litellm_sampler.py  open_router_sampler.py
ayamytk/train/datagen/: main.py
ayamytk/train/dictionary-model/: templates.py
bench/: model_testing.py  pyproject.toml  utils.py
bench/book/: short_qna.csv
pages/: 1_📸_Camera_OCR.py
test/bench/: common.py  evals.py  exam_eval.py  mmlu_eval.py  model_testing.py  result_fix.py  templates.py
test/bench/G12-Exam/: short_qna.csv
test/bench/book/: fib.csv  multiple_choice_qna.csv  short_qna.csv  tof_qna.csv
test/bench/mmlu/: mmlu_lite_my_400_single_row.csv
test/bench/sampler/: cohere_sampler.py  litellm_sampler.py  openrouter_sampler.py
tools/ocr-app/: Home.py
train/data/bactrian-x/: translate.py
train/dictionary-model/: generate.py  templates.py
