[project]
name = "ayamytk"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "pillow",
    "streamlit",
    "opencv-python",
    "numpy",
    "datasets>=2.13.2",
    "google-cloud-documentai>=3.3.0",
    "python-dotenv>=0.21.1",
    "litellm>=0.1.202",
    "selenium>=4.11.2",
    "webdriver-manager>=4.0.2",
    "pymupdf>=1.22.5",
    "pymyanlp @ git+https://github.com/Rickaym/pymyanlp",
    "networkx>=2.6.3",
    "matplotlib>=3.5.3",
    "scipy>=1.7.3",
    "fastavro==1.10.0",
    "cohere>=4.57",
    "tables>=3.10.1",
    "pandas>=1.1.5",
    "tabulate>=0.9.0",
    "pip>=25.1.1",
    "beautifulsoup4>=4.13.4",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
pymyanlp = { git = "https://github.com/Rickaym/pymyanlp" }


[tool.setuptools.packages.find]
include = ["ayamytk*"]
