[project]
name = "ayamytk"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "streamlit",
    "numpy",
    "datasets>=2.13.2",
    "google-cloud-documentai>=3.3.0",
    "python-dotenv>=0.21.1",
    "litellm>=0.1.202",
    "pymyanlp @ git+https://github.com/Rickaym/pymyanlp",
    "fastavro==1.10.0",
    "cohere>=4.57",
    "tables>=3.10.1",
    "pandas>=1.1.5",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
pymyanlp = { git = "https://github.com/Rickaym/pymyanlp" }


[tool.setuptools.packages.find]
include = ["ayamytk*"]
