[project]
name = "ayamytk"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cohere>=5.15.0",
    "datasets>=3.6.0",
    "fastavro>=1.11.1",
    "google-cloud-documentai>=3.5.0",
    "numpy>=2.0.2",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "tables>=3.9.2",
    "tabulate>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["ayamytk*"]
