[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aya-burmese"
version = "0.1.0"
description = "Aya Burmese"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cohere>=5.13.2",
    "litellm>=1.67.2",
    "together>=1.3.14",
]
